# Pretty-Good-Diff

./: .gitignore  LICENSE.txt  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
pretty_good_diff/: __init__.py  colors.py  diff.py  output.py
src/: __init__.py  dictionary.py  diff.py  exceptions.py  json.py  main.py  output.py  pydantic.py  str_diff.py  str_diff_dynamic_programming.py
src/pretty_good_diff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_dictionary.py  test_diff.py  test_json.py  test_main.py  test_output.py  test_pydantic.py  test_str_diff.py  test_str_diff_dynamic_programming.py
