[metadata]
name = pretty-good-diff
version = 0.1.0
author = Viktor Bubanja
author_email = viktor.bubanja@hotmail.com
description = Gives you a pretty good diff between two objects
readme = "README.md"
keywords = diff, difference, checker, highlight, color, colour, colored, coloured
url = https://github.com/Viktor-Bubanja/pretty-good-diff
project_urls =
    repository = https://github.com/Viktor-Bubanja/pretty-good-diff
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.9
packages=find:

[options.extras_require]
test = 
    pytest

[options.packages.find]
