[metadata]
name = pretty-good-diff
version = 0.1.0
author = Viktor Bubanja
author_email = viktor.bubanja@hotmail.com
description = Gives you a pretty good diff between two objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Viktor-Bubanja/pretty-good-diff
project_urls =
    Repository = https://github.com/Viktor-Bubanja/pretty-good-diff
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    diff
    difference
    checker
    highlight
    color
    colour
    colored
    coloured

[options]
python_requires = >=3.9
packages = find:

[options.extras_require]
test = 
    pytest
